--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2,8 +2,6 @@
 
 %todo
 % OMS network = graph???
-% symbol maps generalized to graphs
-% refinement language
 % in grammar, use NT+
 % consistency and %implies for graphs (maybe also refinement?)
 % logical consequence = generalization, converse = specialization
@@ -1192,6 +1190,14 @@ set of \termref{sentences} over the signature}
 }
 
 \red{
+ \termdefinition{entailment\synonym specialization}{relation between two \termref{OMS}
+expressing that the second one is logically implied by the first one}
+\begin{note}
+The converse is generalization.
+\end{note}
+}
+
+\red{
   \termdefinition{query language}{\termref{OMS language} specifically dedicated to \termref{queries}}
 \begin{example}
 SPARQL, Prolog
@@ -1346,10 +1352,10 @@ More precisely, an OMS is flattenable if and only if it is either a basic OMS or
 
   \termdefinition{extension}{\termref{OMS} whose sets of \termref{non-logical symbols} and \termref{sentences} are supersets of those present in a given smaller \termref{OMS}}
 
-   \termdefinition{extension mapping}: \termref{mapping} between two
+   \termdefinition{extension mapping}{inclusion \termref{mapping} between two
    OMSs where the sets of \termref{non-logical symbols} and
    \termref{sentences} of the second OMS are supersets of those
-   present in the first OMS 
+   present in the first OMS} 
 \begin{note} 
 The second OMS is said to extend the first, and is an extension of the
 first OMS.
@@ -1481,7 +1487,7 @@ best possible (in the sense of a maximum set of logical consequences)
 Some specific kinds of logical OMS mappings will be introduced below.  
   \end{note}
 
-  \termdefinition{interpretation\synonym view}{\termref{logical OMS mapping} that postulates a relation between two \termref{OMS}}
+  \termdefinition{interpretation\synonym view\synonym refinement}{\termref{logical OMS mapping} that postulates a relation between two \termref{OMS}}
   \begin{note}
     An interpretation typically leads to proof obligations, \ie one has to prove that axioms of the source OMS of the mapping are theorems in the target OMS.
   \end{note}
