--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1063,7 +1063,7 @@ For the purposes of this document, the following terms and definitions apply.
 }
 
   \termdefinition{distributed ontology, modeling and specification language\synonym
-  DOL}{language for formalizing \termred{libraries} of \termref{focused and distributed OMS}, whose syntax and semantics are specified in this \IS}
+  DOL}{language for formalizing \termref{libraries} of \termref{focused and distributed OMS}, whose syntax and semantics are specified in this \IS}
 
 \begin{note}
  When viewed as an \termref{OMS language}, DOL has \termref{OMS} as its
@@ -2896,7 +2896,7 @@ BoundPrefix              = ':' | Prefix ; ($<$\rm see definition in \cref{c:curi
 IRIBoundToPrefix         = '<' , FullIRI , '>' ;
 
 DistOMSDefn            = DistOMSKeyword , DistOMSName , '=' , [ ConsStrength ] , DistOMS ;
-DistOMSKeyword         = 'distributed oms' | 'distributed ontology' | 'distributed specificaiton' | 'distributed model'
+DistOMSKeyword         = 'distributed oms' | 'distributed ontology' | 'distributed specificaiton' | 'distributed model' ;
 DistOMSName            = IRI ;
 DistOMS                = DistOMSElements , ExcludeExtensions ;
 DistOMSElements        = DistOMSElement , { ',' , DistOMSElement } ;
