corrected section level for queries

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3076,7 +3076,7 @@ Confidence           = Double ;
 Double               = ($<$ a number $\in [0,1]$ $>$) ;
 \end{lstlisting}
 
-\sclause{Queries}
+\ssclause{Queries}
 \red{new!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!}
 \begin{lstlisting}[language=ebnf,escapeinside={<>},mathescape]
 QueryRelatedDefn     = QueryDefn | SubstDefn | ResultDefn ;
