resolved some ednotes about alignments etc.

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -732,7 +732,7 @@ In complex applications, which involve multiple OMS with overlapping concept spa
   While OMS alignment is most commonly studied for OMS formalized\CLnote{spell-check everything for American English.} in the same OMS language, the different OMS used by complex applications may also be written in different OMS languages, even if they have different levels of expressiveness. 
  This \IS faces this diversity not by proposing yet another OMS language that would subsume all the others.  
   Instead, it accepts the diverse reality and formulates means (on a sound and formal semantic basis) to compare and integrate OMS that are written in different formalisms.
-  It specifies DOL (Distributed Ontology, Modeling and Specification Language), a formal language for expressing not only OMS but also mappings between OMS formalized in different OMS languages.\ednote{Is the plural of OMS just ``OMS'' or ``OMS'''?}
+  It specifies DOL (Distributed Ontology, Modeling and Specification Language), a formal language for expressing not only OMS but also mappings between OMS formalized in different OMS languages.
 
 Thus, DOL gives interoperability a formal grounding and makes heterogeneous OMS and services based on them amenable to checking of coherence (\eg consistency, conservativity, intended consequences, and compliance).
 
@@ -794,7 +794,7 @@ registry shall also include descriptions of DOL-conformant languages
 and translations (as well as other information needed by implementors
 and users) in machine-processable form.  
 
-There will be Maintenance Authority (MA)\footnote{ or, depending on
+There will be Maintenance Authority (MA)\footnote{or, depending on
   advisability, a Registration Authority} established to maintain the
 registry as an informative resource governed by the standard.  The
 registry contents itself will not be normative; however, it is
@@ -1089,16 +1089,6 @@ For the purposes of this document, the following terms and definitions apply.
   \begin{example}
     OMS languages include OWL, Common Logic, F-logic, UML class diagrams, RDFS, and OBO.
   \end{example}
- \ednote{Are query languages, like SPARQL, considered by OntoIOp to be
-   OMS languages? That is an interesting point. I tend to say "yes",
-   because we definitely want to have them in. However, query
-   languages do not fit exactly into the scheme of the OntoIOp notion
-   of OMS language (and the underlying notion of institution), because
-   the latter is about satisfaction of sentences in models, whereas a
-   query language is about computing answer substitutions to
-   queries. However, there is research about how to relate and
-   reconcile both (also in the institution community). I think we
-   should devote an OntoIOp telecon to this topic.}
 
 
   \termdefinition{non-logical symbol\synonym OMS symbol}{atomic expression or syntactic constituent of an \termref{OMS} that requires an interpretation through a \termref{model}}
@@ -1525,7 +1515,13 @@ original and the renamed OMS.
   \termdefinition{reduction}{\termref{logical OMS mapping} reducing an \termref{OMS} to a smaller \termref{signature}}
 
   \termdefinition{alignment}{flexible, relational \termref{OMS mapping} that does not always have a formal, logic-based semantics}
-    \ednote{this is too vague, and we have given formal semantics to a large class of alignments. It calls at least for more discussion.}
+\begin{note}
+Alignments consist of \termref{correspondences}, each of which may
+have a confidence value. If all confidence values are 1, the alignment
+has a formal semantics.
+\end{note}
+
+  \termdefinition{correspondence}{pair of \termref{symbols} that belong to an \termref{alignment}}
 
   \termdefinition{matching}{algorithmic procedure that generates an \termref{alignment} for two given \termref{OMS}}
   \begin{note}
