filter -> select/reject

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2477,7 +2477,8 @@ Extraction           = 'extraction', [ InterfaceSignature ] ;
 
 Approximation        = 'approximation' , InterfaceSignature , [ LogicRef ] ;
 
-Filtering            = 'filter', BasicOMS ;
+Filtering            = 'select' , BasicOMS 
+                     | 'reject' , BasicOMS ;
 
 ExtensionOMS         = [ ExtConsStrength ] , [ ExtensionName ] , ExtendingOMS ;
 
@@ -2953,7 +2954,8 @@ Extraction           = 'extract' , [InterfaceSignature]
 Approximation        = 'forget' , InterfaceSignature , [ 'with', LogicRef ] 
                      | 'keep' , InterfaceSignature , [ 'with', LogicRef ] ;
 
-Filtering            = 'filter', BasicOMS ;
+Filtering            = 'select' , BasicOMS 
+                     | 'reject' , BasicOMS ;
 
 ExtensionOMS         = [ ExtConsStrength ] , [ ExtensionName ] , ExtendingOMS ;
 
