--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1776,7 +1776,7 @@ TODO Michael: explain the relationship to other notions of interoperability (fro
 
 
 \chapter{Symbols}
-\ednote{add OMG stuff}
+\ednote{add OMG stuff MC: done}
 
 As listed below, these symbols and abbreviations are generally for the main clauses of the \IS. Some annexes may introduce their own symbols and abbreviations which will be grouped together within that annex.
 
@@ -1785,13 +1785,19 @@ As listed below, these symbols and abbreviations are generally for the main clau
 \symboldef{CGIF}{Conceptual Graph Interchange Format}
 \symboldef{CL}{Common Logic }
 \symboldef{CLIF}{Common Logic Interchange Format}
+\symboldef{CORBA}{Common Object Request Broker Architecture}
 \symboldef{CURIE}{Compact URI expression}
+\symboldef{CWM}{Common Warehouse Metamodel}
 \symboldef{DDL}{Distributed description logic}
 \symboldef{DOL}{Distributed Ontology, Modeling and Specification Language }
 \symboldef{EBNF}{Extended Backus-Naur Form}
 \symboldef{E-connections}{a modular ontology language (closely related to DDL)}
 \symboldef{F-logic}{frame logic, an object-oriented ontology language}
+\symboldef{IDL}{Interface Definition Language}
+\symboldef{IIOP}{Internet Inter-ORB Protocol}
 \symboldef{IRI}{Internationalized Resource Identifier}
+\symboldef{MDA}{Model Driven Architecture}
+\symboldef{MOF}{Meta-Object Facility}
 \symboldef{OWL 2}{Web Ontology Language (W3C), version 2: family of knowledge representation languages for authoring ontologies}
 \symboldef{OWL 2 DL}{description logic profile of OWL 2}
 \symboldef{OWL 2 EL}{a sub-Boolean profile of OWL 2 (used often \eg in medical ontologies)}
@@ -1800,14 +1806,19 @@ As listed below, these symbols and abbreviations are generally for the main clau
 \symboldef{OWL 2 RL}{fragment of OWL 2 designed to support rule-based reasoning}
 \symboldef{OWL 2 XML}{XML-based serialization of the OWL 2 language}
 \symboldef{P-DL}{Package-based description logic}
+\symboldef{PIM}{Platform-independent Model}
+\symboldef{PSM}{Platform-specific Model}
 \symboldef{RDF}{Resource Description Framework, a graph data model}
+\symboldef{RDFS}{RDF Schema}
 \symboldef{RDFa}{a set of XML attributes for embedding RDF graphs into XML documents}
 \symboldef{RDF/XML}{an XML serialization of the RDF data model}
 \symboldef{RIF}{Rule Interchange Format}
+\symboldef{SMOF}{MOF Support for Semantic Structures}
 \symboldef{UML}{Unified Modeling Language}
 \symboldef{URI}{Uniform Resource Identifier}
 \symboldef{URL}{Uniform Resource Locator}
 \symboldef{W3C}{World Wide Web Consortium}
+\symboldef{XMI}{XML Metadata Interchange}
 \symboldef{XML}{eXtensible Markup Language}
 \end{symbols}
 
