changed title into DOL

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -484,7 +484,7 @@ Date: \today
 \bigskip\bigskip
 \bigskip
 %\HUGE{a}
-{\fontsize{30}{36}\selectfont Ontology, Model, and Specification Integration and Interoperability (OntoIOp)}
+{\fontsize{30}{36}\selectfont The Distributed Ontology, Model, and Specification Language (DOL)}
 
 \bigskip
 Version \version
